--- a/server-extension/pom.xml
+++ b/server-extension/pom.xml
@@ -16,6 +16,12 @@
             <artifactId>oskari-control-base</artifactId>
             <version>${oskari.version}</version>
         </dependency>
+	    
+	<dependency>
+            <groupId>fi.nls.oskari.service</groupId>
+            <artifactId>oskari-control-users</artifactId>
+            <version>${oskari.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
