--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>my.group</groupId>
     <artifactId>my.app</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.2.0</version>
     <packaging>pom</packaging>
-    <name>My Oskari applications</name>
+    <name>Valkeakoski Oskari</name>
 
     <properties>
-        <oskari.version>1.48.0</oskari.version>
+        <oskari.version>1.52.0</oskari.version>
 
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
@@ -19,6 +19,7 @@
         <junit.version>4.11</junit.version>
         <slf4j.version>1.7.12</slf4j.version>
         <jackson.version>2.9.0</jackson.version>
+        <log4j.version>2.11.1</log4j.version>
     </properties>
 
     <repositories>
