--- a/webapp-map/pom.xml
+++ b/webapp-map/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>my.group</groupId>
         <artifactId>my.app</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.2.0</version>
     </parent>
 
     <artifactId>webapp-map</artifactId>
@@ -48,11 +48,11 @@
             <artifactId>control-userlayer</artifactId>
             <version>${oskari.version}</version>
         </dependency>
-             
+
         <dependency>
-            <groupId>fi.nls.oskari.service</groupId>
+            <groupId>fi.nls.oskari.extras</groupId>
             <artifactId>oskari-search-nls</artifactId>
-            <version>${oskari.version}</version>
+            <version>2.1</version>
         </dependency>
 
         <!-- support for user registration -->
@@ -95,9 +95,9 @@
         </dependency>
         <!-- /oskari -->
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>${slf4j.version}</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
