--- a/webapp-transport/pom.xml
+++ b/webapp-transport/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
         <groupId>my.group</groupId>
         <artifactId>my.app</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.2.0</version>
 	</parent>
 
     <artifactId>webapp-transport</artifactId>
@@ -31,9 +31,9 @@
             <version>${oskari.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>${slf4j.version}</version>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
         <dependency>
             <groupId>com.netflix.hystrix</groupId>
