--- a/app-resources/pom.xml
+++ b/app-resources/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>my.group</groupId>
-        <artifactId>my.app</artifactId>
+        <groupId>kartat.vlk.fi</groupId>
+        <artifactId>server-extension</artifactId>
         <version>1.2.0</version>
     </parent>
     <artifactId>app-resources</artifactId>
