--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>kartat.vlk.fi</groupId>
-    <artifactId>sesrver-extension</artifactId>
+    <artifactId>server-extension</artifactId>
     <version>1.2.0</version>
     <packaging>pom</packaging>
     <name>Valkeakoski Oskari</name>
