--- a/webapp-map/pom.xml
+++ b/webapp-map/pom.xml
@@ -3,8 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>my.group</groupId>
-        <artifactId>my.app</artifactId>
+        <groupId>kartat.vlk.fi</groupId>
+        <artifactId>server-extension</artifactId>
         <version>1.2.0</version>
     </parent>
 
