--- a/app-resources/pom.xml
+++ b/app-resources/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>kartat.vlk.fi</groupId>
-        <artifactId>server-extension</artifactId>
+        <artifactId>oskari-extension</artifactId>
         <version>1.2.0</version>
     </parent>
     <artifactId>app-resources</artifactId>
