--- a/webapp-map/pom.xml
+++ b/webapp-map/pom.xml
@@ -28,13 +28,6 @@
             <version>${project.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.geotools</groupId>
-            <artifactId>gt-metadata</artifactId>
-            <version>${geotools.version}</version>
-        </dependency>
-
-
         <!-- Replace icu4j version included by axiom-api with newer version
         which does not brake .jar investigation performed by jetty-maven plugin  -->
         <dependency>
@@ -42,51 +35,68 @@
             <artifactId>icu4j</artifactId>
             <version>51.1</version>
         </dependency>
-        
-        <!-- oskari -->
+
         <dependency>
             <groupId>fi.nls.oskari.service</groupId>
-            <artifactId>oskari-control-example</artifactId>
-            <version>${oskari.version}</version>
-        </dependency>
-             
-        <dependency>
-            <groupId>org.oskari</groupId>
-            <artifactId>control-userlayer</artifactId>
-            <version>${oskari.version}</version>
+            <artifactId>oskari-control-base</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>fi.nls.oskari.extras</groupId>
-            <artifactId>oskari-search-nls</artifactId>
-            <version>2.1</version>
-        </dependency>
-
-        <!-- support for user registration -->
         <dependency>
             <groupId>fi.nls.oskari.service</groupId>
             <artifactId>oskari-control-users</artifactId>
-            <version>${oskari.version}</version>
         </dependency>
 
-        <!-- support for myplaces functionality -->
+        <dependency>
+            <groupId>fi.nls.oskari.service</groupId>
+            <artifactId>oskari-control-example</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>fi.nls.oskari.service</groupId>
             <artifactId>oskari-control-myplaces</artifactId>
-            <version>${oskari.version}</version>
         </dependency>
 
-        <!-- admin routes -->
         <dependency>
             <groupId>fi.nls.oskari.service</groupId>
             <artifactId>oskari-control-admin</artifactId>
-            <version>${oskari.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>fi.nls.oskari.service</groupId>
+            <artifactId>oskari-control-routing</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>fi.nls.oskari.service</groupId>
+            <artifactId>oskari-control-statistics</artifactId>
+        </dependency>
+        <!-- Statistics plugins -->
+        <dependency>
+            <groupId>fi.nls.oskari.service</groupId>
+            <artifactId>service-statistics-pxweb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.oskari.service</groupId>
+            <artifactId>service-statistics-unsd</artifactId>
+        </dependency>
+        <!-- /Statistics plugins -->
+
+        <dependency>
+            <groupId>org.oskari</groupId>
+            <artifactId>control-userlayer</artifactId>
         </dependency>
 
         <dependency>
             <groupId>fi.nls.oskari</groupId>
+            <artifactId>service-logging</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-slf4j-impl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>fi.nls.oskari</groupId>
             <artifactId>servlet-map</artifactId>
-            <version>${oskari.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.ibm.icu</groupId>
@@ -96,36 +106,18 @@
         </dependency>
 
         <dependency>
-            <groupId>fi.nls.oskari</groupId>
-            <artifactId>service-logging</artifactId>
-            <version>${oskari.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.oskari</groupId>
-            <artifactId>control-mvt</artifactId>
-            <version>${oskari.version}</version>
-        </dependency>
-
-
-        <!-- /oskari -->
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
-            <version>${log4j.version}</version>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-dbcp2</artifactId>
-            <version>${commons-dbcp2.version}</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>${postgresql.version}</version>
         </dependency>
 
     </dependencies>
