--- a/webapp-map/pom.xml
+++ b/webapp-map/pom.xml
@@ -119,6 +119,12 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
+             
+        <dependency>
+            <groupId>fi.nls.oskari.extras</groupId>
+            <artifactId>oskari-search-nls</artifactId>
+            <version>2.1</version>
+         </dependency>
 
     </dependencies>
 
